--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
         </div>
 		<div class="container">
         	<section class="second-section">
-           
                 <h2 class="title">What we do</h2>
                 <ul class="image">
                     <li>
@@ -308,44 +307,43 @@
     </main>
 	<div class="container">
     	<footer class="footer">
-            <a class="logo-white" href="/"><span class="logo-label">Web</span>Studio</a>
 			<address class="contact-class">
+                <a class="logo-white" href="/"><span class="logo-label">Web</span>Studio</a>
                 <a class="address-class" href="695 Park Ave, NY 10065, USA">695 Park Ave, NY 10065, USA</a>
                 <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <a class="phone" href="tel:+12127724150">+1212-772-4150</a>
-            
-				<div class="social-media">FIND US ON</div>
-				<div class="social-media-class">
-					<div class="social-media-footer">
-						<a href="https://www.instagram.com/">
-							<svg class="media" width="22px" height="22px">
-								<use xlink:href="SVG/symbol-defs.svg#icon-instagram"></use>
-							</svg>
-						</a>
-					</div>
-					<div class="social-media-footer">
-						<a href="https://www.twitter.com/">
-							<svg class="media" width="22px" height="22px">
-								<use xlink:href="SVG/symbol-defs.svg#icon-twitter"></use>
-							</svg>
-						</a>
-					</div>
-					<div class="social-media-footer">
-						<a href="https://www.facebook.com/">
-							<svg class="media" width="22px" height="22px">
-								<use xlink:href="SVG/symbol-defs.svg#icon-facebook"></use>
-							</svg>
-						</a>
-					</div>
-					<div class="social-media-footer">
-						<a href="https://www.linkedin.com/">
-							<svg class="media" width="22px" height="22px">
-								<use xlink:href="SVG/symbol-defs.svg#icon-linkedin"></use>
-							</svg>
-						</a>
-					</div>
+            </address>	
+            <div class="contact-class">
+                <div class="social-media">FIND US ON</div>
+				<div class="social-media-footer">
+					<a href="https://www.instagram.com/">
+						<svg class="media" width="22px" height="22px">
+							<use xlink:href="SVG/symbol-defs.svg#icon-instagram"></use>
+						</svg>
+					</a>
 				</div>
-			</address>
+				<div class="social-media-footer">
+					<a href="https://www.twitter.com/">
+						<svg class="media" width="22px" height="22px">
+							<use xlink:href="SVG/symbol-defs.svg#icon-twitter"></use>
+						</svg>
+					</a>
+				</div>
+				<div class="social-media-footer">
+					<a href="https://www.facebook.com/">
+						<svg class="media" width="22px" height="22px">
+							<use xlink:href="SVG/symbol-defs.svg#icon-facebook"></use>
+						</svg>
+					</a>
+				</div>
+				<div class="social-media-footer">
+					<a href="https://www.linkedin.com/">
+						<svg class="media" width="22px" height="22px">
+							<use xlink:href="SVG/symbol-defs.svg#icon-linkedin"></use>
+						</svg>
+					</a>
+				</div>
+			</div>
     	</footer>
 	</div>
 </body>
