--- a/portofolio.html
+++ b/portofolio.html
@@ -1,126 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>WebStudio Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css/styles.css">
-</head>
-<body class="container"> 
-    <header class="global-header">
-        <div class="navigation">
-            <div class="logo">
-                <a class="logo-black" href="index.html">
-                    <span class="logo">Web</span>Studio
-                </a>
-            </div>
-            <nav>
-                <ul>
-                    <li>
-                        <a class="navigation-menu" href="index.html">Studio</a>
-                    </li>
-                    <li>
-                        <a class="navigation-menu" href="portofolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="navigation-menu" href="contact.html">Contacts</a>
-                    </li>
-                </ul>
-            </nav>
+    <head>
+        <meta charset="UTF-8">
+        <title>WebStudio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css/styles-main.css">
+        <link rel="stylesheet" href="SVG/symbol-defs.svg"> <!-- Make sure to include the sprite here -->
+    </head>
+    <body>
+        <!--First row-->
+        <div class="container">
+            <header class="global-header">
+                <div class="navigation">
+                    <div class="logo">
+                        <a class="logo-black" href="index.html">
+                            <span class="logo">Web</span>Studio
+                        </a>
+                    </div>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a class="navigation-menu" href="index.html">Studio</a>
+                            </li>
+                            <li>
+                                <a class="navigation-menu" href="portofolio.html">Portfolio</a>
+                            </li>
+                            <li>
+                                <a class="navigation-menu" href="contact.html">Contacts</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <address>
+                    <div class="icon">
+                        <a class="header-contact" href="mailto:info@devstudio.com">
+                            <svg class="icon-envelope">
+                                <use xlink:href="SVG/symbol-defs.svg#icon-envelope"></use>
+                            </svg>
+                            info@devstudio.com
+                        </a>
+                    </div>
+                    <div class="header-contact">
+                        <a class="header-contact" href="tel:+12127724150">
+                            <svg class="icon-smartphone">
+                                <use xlink:href="SVG/symbol-defs.svg#icon-smartphone"></use>
+                            </svg>
+                            +1 212-772-4150
+                        </a>
+                    </div>
+                </address>
+            </header>
         </div>
-        <address class="contact-class">
-            <div class="icon">
-                <a class="header-contact" href="mailto:info@devstudio.com">
-                    <svg class="icon-envelope">
-                        <use xlink:href="SVG/symbol-defs.svg#icon-envelope"></use>
-                    </svg>
-                    info@devstudio.com
-                </a>
+        <main class="global-main">
+            <div class="container">
+                <div class="main-section">
+                    <button class="button" type="button">All</button>
+                    <button class="button" type="button">Web-sites</button>
+                    <button class="button" type="button">Apps</button>
+                    <button class="button" type="button">Design</button>
+                    <button class="button" type="button">Marketing</button>
+                </div>
+                <div class="second-section">
+                    <ul>
+                        <li class="product">  
+                            <img src="portofolio-images/technoduck.jpg" alt="poza">
+                            <h3>Technoduck</h3>
+                            <p>Web-site</p>
+                        </li>                       
+                        <li class="product">
+                            <img src="portofolio-images/posternew.jpg" alt="poza">
+                            <h3>Poster New Orlean vs Golden Star</h3>
+                            <p>Design</p>
+                        </li>
+                        <li class="product">
+                            <img src="portofolio-images/seefood.jpg" alt="poza">
+                            <h3>Seafood Restaurant</h3>
+                            <p>Apps</p>
+                        </li>
+                        <li class="product">
+                            <img src="portofolio-images/projectprime.jpg" alt="poza">
+                            <h3>Project Prime</h3>
+                            <p>Marketing</p>
+                        </li>
+                        <li class="product">
+                            <img src="portofolio-images/projectboxes.jpg" alt="poza">
+                            <h3>Project Boxes</h3>
+                            <p>Apps</p>
+                        </li>
+                        <li class="product">
+                            <img src="portofolio-images/inspiration.jpg" alt="poza">
+                            <h3>Inspiration has no Borders</h3>
+                            <p>Web-site</p>
+                        </li>
+                        <li class="product">
+                            <img src="portofolio-images/limited.jpg" alt="poza">
+                            <h3>Limited Edition</h3>
+                            <p>Design</p>
+                        </li>
+                        <li class="product">
+                            <img src="portofolio-images/projectlab.jpg" alt="poza">
+                            <h3>Project LAB</h3>
+                            <p>Marketing</p>
+                        </li>
+                        <li class="product">
+                            <img src="portofolio-images/growing.jpg" alt="poza">
+                            <h3>Growing Business</h3>
+                            <p>Apps</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="header-contact icon">
-                <a class="header-contact" href="tel:+12127724150">
-                    <svg class="icon-smartphone">
-                        <use xlink:href="SVG/symbol-defs.svg#icon-smartphone"></use>
-                    </svg>
-                    +1 212-772-4150
-                </a>
-            </div>
-        </address>
-    </header>
-    <main class="global-main">
-        <section class="main-section">
-            <button class="button" type="button">All</button>
-            <button class="button" type="button">Web-sites</button>
-            <button class="button" type="button">Apps</button>
-            <button class="button" type="button">Design</button>
-            <button class="button" type="button">Marketing</button>
-        </section>
-        <section class="second-section">
-            <ul>
-                <li class="product">  
-                    <img src="portofolio-images/technoduck.jpg" alt="poza">
-                    <h3>Technoduck</h3>
-                    <p>Web-site</p>
-                </li>                       <li class="product">
-                    <img src="portofolio-images/posternew.jpg" alt="poza">
-                    <h3>Poster New Orlean vs Golden Star</h3>
-                    <p>Design</p>
-                </li>
-                <li class="product">
-                    <img src="portofolio-images/seefood.jpg" alt="poza">
-                    <h3>Seafood Restaurant</h3>
-                    <p>Apps</p>
-                </li>
-                <li class="product">
-                    <img src="portofolio-images/projectprime.jpg" alt="poza">
-                    <h3>Project Prime</h3>
-                    <p>Marketing</p>
-                </li>
-                <li class="product">
-                    <img src="portofolio-images/projectboxes.jpg" alt="poza">
-                    <h3>Project Boxes</h3>
-                    <p>Apps</p>
-                </li>
-                <li class="product">
-                    <img src="portofolio-images/inspiration.jpg" alt="poza">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Web-site</p>
-                </li>
-                <li class="product">
-                    <img src="portofolio-images/limited.jpg" alt="poza">
-                    <h3>Limited Edition</h3>
-                    <p>Design</p>
-                </li>
-                <li class="product">
-                    <img src="portofolio-images/projectlab.jpg" alt="poza">
-                    <h3>Project LAB</h3>
-                    <p>Marketing</p>
-                </li>
-                <li class="product">
-                    <img src="portofolio-images/growing.jpg" alt="poza">
-                    <h3>Growing Business</h3>
-                    <p>Apps</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer class="footer">
-        <a href="index.html">
-            <img src="images/WebStudio.png" alt="Studio Logo" class="footer-logo">
-        </a>
-        <ul class="contact-class">
-            <li>
-                <a href="adress:695 Park Ave, NY 10065, USA" class="adress">695 Park Ave, NY 10065, USA</a>
-            </li>
-            <li>
-                <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+12127724150" class="phone">+1 212-772-4150 </a>
-            </li>
-        </ul>
-    </footer>
-</body>
+        </main>
+        <footer class="footer">
+			<address class="contact-class">
+                <a class="logo-white" href="/"><span class="logo-label">Web</span>Studio</a>
+                <a class="address-class" href="695 Park Ave, NY 10065, USA">695 Park Ave, NY 10065, USA</a>
+                <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="phone" href="tel:+12127724150">+1212-772-4150</a>
+            </address>	
+            <div class="contact-class">
+                <div class="social-media">FIND US ON</div>
+				<div class="social-media-footer">
+					<a href="https://www.instagram.com/">
+						<svg class="media" width="22px" height="22px">
+							<use xlink:href="SVG/symbol-defs.svg#icon-instagram"></use>
+						</svg>
+					</a>
+				</div>
+				<div class="social-media-footer">
+					<a href="https://www.twitter.com/">
+						<svg class="media" width="22px" height="22px">
+							<use xlink:href="SVG/symbol-defs.svg#icon-twitter"></use>
+						</svg>
+					</a>
+				</div>
+				<div class="social-media-footer">
+					<a href="https://www.facebook.com/">
+						<svg class="media" width="22px" height="22px">
+							<use xlink:href="SVG/symbol-defs.svg#icon-facebook"></use>
+						</svg>
+					</a>
+				</div>
+				<div class="social-media-footer">
+					<a href="https://www.linkedin.com/">
+						<svg class="media" width="22px" height="22px">
+							<use xlink:href="SVG/symbol-defs.svg#icon-linkedin"></use>
+						</svg>
+					</a>
+				</div>
+			</div>
+    	</footer>
+    </body>
 </html>
