--- a/portofolio.html
+++ b/portofolio.html
@@ -19,7 +19,7 @@
                             <span class="logo">Web</span>Studio
                         </a>
                     </div>
-                    <nav>
+                    <nav class="navbar">
                         <ul>
                             <li>
                                 <a class="navigation-menu" href="index.html">Studio</a>
