--- a/index.html
+++ b/index.html
@@ -357,14 +357,14 @@
 	</div>
     <!-- modal window -->
     <div class="modal is-hidden" data-modal>
-        <div class="modal-content">
+        <div class="modal-content" >
             <button class="close-button" data-modal-close="">&times;</button>
         </div>
         <div>
             <p>Modal window text</p>
         </div>
     </div>
-    <div class="overlay hidden"></div>
-    <script src="./js/modal.js"></script>
+    <div class="overlay is-hidden"></div>
+    <script src="../js/modal.js"></script>
 </body>
 </html>
