--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
             <section class="hero-section">
                 <h1 class="hero-title">EFFECTIVE SOLUTIONS FOR <br> YOUR BUSINESS</h1>
-                <button data-modal-open class="button-open" type="button" >Request our services</button>
+                <button  class="button-open" type="button" data-modal-open >Request our services</button>
             </section>
         </div>
         <div class="container">
@@ -358,7 +358,7 @@
     <!-- modal window -->
     <div class="modal is-hidden" data-modal>
         <div class="modal-content" >
-            <button class="close-button" data-modal-close="">&times;</button>
+            <button class="close-button" data-modal-close>&times;</button>
         </div>
         <div>
             <p>Modal window text</p>
