--- a/portofolio.html
+++ b/portofolio.html
@@ -63,47 +63,83 @@
                     <button class="button" type="button">Marketing</button>
                 </nav>
                 <div class="second-section">
-                    <div class="product">  
+                    <div class="product"> 
+                        <div class="overlay">
+                            <p class="product-txt">
+                            </p>
+                        </div> 
                         <img src="portofolio-images/technoduck.jpg" alt="poza">
                         <h3>Technoduck</h3>
                         <p>Web-site</p>
                     </div>                       
                     <div class="product">
+                        <div class="overlay">
+                            <p class="product-txt">
+                            </p>
+                        </div> 
                         <img src="portofolio-images/posternew.jpg" alt="poza">
                         <h3>Poster New Orlean vs Golden Star</h3>
                         <p>Design</p>
                     </div>
                     <div class="product">
+                        <div class="overlay">
+                            <p class="product-txt">
+                            </p>
+                        </div>
                         <img src="portofolio-images/seefood.jpg" alt="poza">
                         <h3>Seafood Restaurant</h3>
                         <p>Apps</p>
                     </div>
                     <div class="product">
+                        <div class="overlay">
+                            <p class="product-txt">
+                            </p>
+                        </div>
                         <img src="portofolio-images/projectprime.jpg" alt="poza">
                         <h3>Project Prime</h3>
                         <p>Marketing</p>
                     </div>
                     <div class="product">
+                        <div class="overlay">
+                            <p class="product-txt">
+                            </p>
+                        </div>
                         <img src="portofolio-images/projectboxes.jpg" alt="poza">
                         <h3>Project Boxes</h3>
                         <p>Apps</p>
                     </div>
                     <div class="product">
+                        <div class="overlay">
+                            <p class="product-txt">
+                            </p>
+                        </div>
                         <img src="portofolio-images/inspiration.jpg" alt="poza">
                         <h3>Inspiration has no Borders</h3>
                         <p>Web-site</p>
                     </div>
                     <div class="product">
+                        <div class="overlay">
+                            <p class="product-txt">
+                            </p>
+                        </div>
                         <img src="portofolio-images/limited.jpg" alt="poza">
                         <h3>Limited Edition</h3>
                         <p>Design</p>
                     </div>
                     <div class="product">
+                        <div class="overlay">
+                            <p class="product-txt">
+                            </p>
+                        </div>
                         <img src="portofolio-images/projectlab.jpg" alt="poza">
                         <h3>Project LAB</h3>
                         <p>Marketing</p>
                     </div>
                     <div class="product">
+                        <div class="overlay">
+                            <p class="product-txt">
+                            </p>
+                        </div>
                         <img src="portofolio-images/growing.jpg" alt="poza">
                         <h3>Growing Business</h3>
                         <p>Apps</p>
