--- a/portofolio.html
+++ b/portofolio.html
@@ -31,6 +31,7 @@
                                 <a class="navigation-menu" href="contact.html">Contacts</a>
                             </li>
                         </ul>
+                        <hr class="line"></hr>
                     </nav>
                 </div>
                 <address>
