--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
               <span class="logo">Web</span>Studio
             </a>
           </div>
-          <nav>
-            <ul>
-              <li>
-                <a class="navigation-menu" href="index.html">Studio</a>
-              </li>
-              <li>
-                <a class="navigation-menu" href="portofolio.html">Portfolio</a>
-              </li>
-              <li>
-                <a class="navigation-menu" href="contact.html">Contacts</a>
-              </li>
+          <nav class="navbar">
+            <ul class="navigation-menu">
+                <li>
+                    <a class="studio" href="index.html">Studio</a>
+                </li>
+                <li>
+                    <a class="portofolio" href="portofolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a class="contact-nav" href="contact.html">Contacts</a>
+                </li>
             </ul>
-          </nav>
+        </nav>
         </div>
         <address>
           <div class="icon">
