--- a/portofolio.html
+++ b/portofolio.html
@@ -20,18 +20,17 @@
                         </a>
                     </div>
                     <nav class="navbar">
-                        <ul>
+                        <ul class="navigation-menu">
                             <li>
-                                <a class="navigation-menu" href="index.html">Studio</a>
+                                <a class="studio" href="index.html">Studio</a>
                             </li>
                             <li>
-                                <a class="navigation-menu" href="portofolio.html">Portfolio</a>
+                                <a class="portofolio" href="portofolio.html">Portfolio</a>
                             </li>
                             <li>
-                                <a class="navigation-menu" href="contact.html">Contacts</a>
+                                <a class="contact-nav" href="contact.html">Contacts</a>
                             </li>
                         </ul>
-                        <hr class="line"></hr>
                     </nav>
                 </div>
                 <address>
@@ -53,6 +52,7 @@
                     </div>
                 </address>
             </header>
+            <hr class="line"></hr>
         </div>
         <main>
             <div class="container">
